using System;
namespace SuperRent {
	public static class Util {
		public const UInt64 newReleaseModifier = 3;
		public const UInt64 normalModifier = 7;
		public const UInt64 promotionalModifier = 14;
		public const Double movieModifier = 1.0;
		public const Double musicModifier = 2.0;
		public const Double gameModifier = 3.0;
		public const Double lateFeeModifier = 0.1;
	}
}